tests/fixtures/hub-module/example/1/bad/src/alpha.ts
export const alphaValue = "alpha"

export const readAlpha = (): string => alphaValue
